client/styles.scss
html,
body {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 12px;
  line-height: 1.42857143;
  color: #333;
  background-color: #fff;
  height: 100%;
  margin: 0;
  color: darkslategray;
}
.container {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  height: auto;
  width: 100%;
  padding: 0;
  margin: 0;
  background-color: rgb(231, 180, 139);
}
.tabla {
  font-size: 14px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: 20%;
  width: 100%;
}
.encabezado {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
.tit {
  width: 40%;
  text-align: center;
  background-color: whitesmoke;
}
.data {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: rgb(208, 240, 215);
}
.botones {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: stretch;
}
.boton {
  width: 40%;
  font-size: 12pt
}
.fila {
  width: 100%;
  box-sizing: border-box;
  padding-right: 10px;
  padding-left: 10px;
  border-style: solid;
  border-bottom-width: 2px;
  border-top-width: 0;
  border-left-width: 2px;
  border-right-width: 2px;
  display: flex;
  justify-content: space-between;
  flex-direction: row;
}
.fila.coinselected {
  background-color: brown;
  color: whitesmoke;
  font-weight: bold;
}
.zoom {
  /* cursor: move; */
  fill: none;
  pointer-events: all;
}

.inner_space {
  color: green;
  background-color: green;
}

.axis{
    stroke-width: 5;
    fill: none;
    color: black;
    background-color: white;
}
.axis--x {
    stroke-width: 1;
    background-color: white;
}

.axis--y {
  stroke-width: 1;
  color: black;
}

.chart {
  width: 100%;
  padding: 0;
  position: relative;
  align-self: flex-start;
}

svg {
  position: relative;
  top: 0;
  left: 0;
}

.linegraph {
  stroke-width: 1;
  fill: none;
  vector-effect: non-scaling-stroke;
}
.axis {
  font: 10px sans-serif;
}
.axis path,
.axis line {
  fill: none;
  stroke: #D4D8DA;
  stroke-width: 2px;
  shape-rendering: crispEdges;
}
.line {
  fill: none;
  stroke: #6F257F;
  stroke-width: 1;
}
.overlay {
  fill: none;
  pointer-events: all;
}
.focus circle {
  fill: #F1F3F3;
  stroke: #6F257F;
  stroke-width: 5px;
}
  
.hover-line {
  stroke: #6F257F;
  // stroke: burlywood;
  stroke-width: 1px;
  stroke-dasharray: 3,3;
}

.aspas {
  stroke: white;
  // stroke: burlywood;
  stroke-width: 5px;
}

.hover-line.y-hover-line {
  stroke: burlywood;
}
.hover-line.x-hover-line {
  stroke-dasharray: 2,2;
}

.graphic_title_text {
  font-family: Dosis-regular,sans-serif;
  font-size: 20px;
  line-height: 1.5;
}

.text_tooltip {
  fill: darkgreen;
  font-weight: bold;
  font-size: 12px;
  font-family: sans-serif;
}

.pname, .pprice {
  pointer-events: none;
}

$break-medium: 1024px;
@media screen and (max-width: $break-medium) {
  .container {
    flex-direction: column-reverse;
  }
  .text_tooltip {
    font-size: 20px;
  }
  .tabla {
    max-width: 100%;
  }
}
$break-small: 500px;
@media screen and (max-width: $break-small) {
  .container {
    flex-direction: column-reverse;
  }
  .text_tooltip {
    font-size: 30px;
  }

  .tabla {
    max-width: 100%;
  }
}

